--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
-    <title>React App</title>
+    <title>Epic_25</title>
   </head>
   <body>
     
